collapse bug修复与优化

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,4 +14,9 @@ a{
 
 .content-container{
     margin-left: 250px;
+    transition: margin-left .3s ease-in-out;
+    -webkit-transition: margin-left .3s ease-in-out;
+}
+.content-container.content-collapse{
+    margin-left: 65px;
 }
